--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,7 @@
 
 # End of Apache Rewrite Rules
  </IfModule>
+
+<FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)$">
+#Header set Expires "Thu, 15 Apr 2020 20:00:00 GMT"
+</FilesMatch>
